# Burgers_equation

./: README.md
Burgers_equation_1.5_galerkin/: PARAMETERS.h  PARAMETERS.h~  PARAMETRS.h~  RUN  animate.gnu~  plot_command.gnu~  sys_parameters.h~
Burgers_equation_1.5_galerkin/documentation/: README.txt
Burgers_equation_1.5_galerkin/project/data/: output_data2.txt
Burgers_equation_1.5_galerkin/project/graphics/: X.eps
Burgers_equation_1.5_galerkin/source/: include_files.h  main1.cpp  main1.cpp~  plot_command.gnu  plot_command.gnu~  solve_ser.h  solve_ser.h~  solver_ser.cpp  sys_parameters.h  vars.txt
Burgers_equation_MKR/: PARAMETERS.h  RUN  RUN~  output_data3.txt~  prob1~  vars.txt~
Burgers_equation_MKR/documentation/: PARAMETERS.h  README.txt  README.txt~
Burgers_equation_MKR/experiments/shock wave/: X.eps
Burgers_equation_MKR/project/data/: output_data_point_funct_2.txt
Burgers_equation_MKR/project/graphics/: X.eps
Burgers_equation_MKR/source/: PARAMETERS.h~  PARAMETRS.h~  RUN  RUN~  add_function.h~  add_functions.cpp  add_functions.cpp~  include_files.h  include_files.h~  main1.cpp  main1.cpp~  plot_command.gnu  plot_command.gnu~  solve_file.h~  solve_ser.h~  solver_file.cpp  solver_file.cpp~  solver_file.h  solver_file.h~  vars.txt
Burgers_equation_MKR_GPU/: CMakeLists.txt  main.cpp  plot_command.gnu  solver_file.cu
Burgers_equation_MKR_GPU/include/: add_functions.h  include_files.h  parameters.h  solver_file.h  source_funct.cuh
